# p3x_slint

./: Cargo.toml  build.rs
src/: main.rs
ui/: ui.slint
